Use concurrent locks by default