@@ -19,8 +19,9 @@
 
 package org.apache.druid.indexing.overlord.config;
 
+import com.fasterxml.jackson.annotation.JsonCreator;
 import com.fasterxml.jackson.annotation.JsonProperty;
-import com.google.common.collect.ImmutableMap;
+import org.apache.druid.common.config.Configs;
 
 import java.util.Map;
 
@@ -35,7 +36,15 @@ import java.util.Map;
 public class DefaultTaskConfig
 {
   @JsonProperty
-  private final Map<String, Object> context = ImmutableMap.of();
+  private final Map<String, Object> context;
+
+  @JsonCreator
+  public DefaultTaskConfig(
+      @JsonProperty("context") Map<String, Object> context
+  )
+  {
+    this.context = Configs.valueOrDefault(context, Map.of());
+  }
 
   public Map<String, Object> getContext()
   {
